--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
     "@nestjs/cli": "^10.0.0",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.0",
